--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
 .*.swp
+
 hive-init-schema.yaml
 hive-metastore/base/core-site.xml
 hive-metastore/base/hive-site.xml
+
+postgresdb/resources/03-roles.sql
+
 trino/base/trino-configmap.yaml
+trino/base/trino-groups.txt
+trino/base/trino-rules.json
 trino/base/password.db
 trino/trino-ingress.yaml
+
 **/base/secrets.env
 **/overlays/**
 !trino/overlays/example
 !mysql-server/overlays/example
+!postgresdb/overlays/example
 !hive-metastore/overlays/example
+
+env/**
+!env/env.template
