--- a/conf/hive-site.xml.template
+++ b/conf/hive-site.xml.template
@@ -24,7 +24,7 @@
     <property>
         <name>javax.jdo.option.ConnectionDriverName</name>
         <value>com.mysql.cj.jdbc.Driver</value>
-        <!-- <value>org.postgresql.Driver> -->
+        <!-- <value>org.postgresql.Driver</value> -->
     </property>
     <property>
         <name>javax.jdo.option.ConnectionURL</name>
