--- a/postgresdb/base/kustomization.yaml
+++ b/postgresdb/base/kustomization.yaml
@@ -1,34 +1,27 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- trino-configmap.yaml
+- namespace.yaml
+- pgsql-pvc.yaml
 - deployment.yaml
-- statefulset.yaml
 - service.yaml
 
 configMapGenerator:
-- name: trino-parameters
+- name: pgsql-params
   envs: 
   - params.env
-- name: trino-access
-  files:
-  - trino-groups.txt
-  - trino-rules.json
 
 generatorOptions:
   disableNameSuffixHash: true
 
 secretGenerator:
-- name: trino-secrets
+- name: pgsql-secret
   envs: 
   - secrets.env
-- name: trino-passwd
-  files:
-  - password.db
 
 labels:
 - includeSelectors: true
   pairs:
-    kustomize.component: trino
-
+    kustomize.component: postgres
