--- a/hive-metastore/base/kustomization.yaml
+++ b/hive-metastore/base/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- hive-init-schema.yaml
+#- hive-init-schema.yaml  # commented for postgres image init
 - deployment.yaml
 - service.yaml
 
