--- a/trino/base/statefulset.yaml
+++ b/trino/base/statefulset.yaml
@@ -21,10 +21,12 @@ spec:
         fsGroup: 1000
       containers:
       - name: trino
-        image: trinodb/trino:457
+        image: trinodb/trino:464
         ports:
         - containerPort: 8080
         env:
+        - name: AWS_REGION
+          value: us-west-3
         - name: AWS_ACCESS_KEY_ID
           valueFrom:
             secretKeyRef:
