--- a/trino/resources/nginx/kustomization.yaml
+++ b/trino/resources/nginx/kustomization.yaml
@@ -1,14 +1,5 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: trino
 
-secretGenerator:
-- name: trino-tls
-  behavior: create
-  type: "kubernetes.io/tls"
-  files:
-  - tls.crt=trino.crt
-  - tls.key=trino.key
-  options:
-    disableNameSuffixHash: true
+resources:
+- base
