--- a/env/example/example.env
+++ b/env/example/example.env
@@ -15,3 +15,8 @@ export TRINO_DOMAINNAME=
 # trino admin credentials
 export TRINO_USER=trino
 export TRINO_PASSWORD=trinoadmin
+
+export TRINO_JVM_MEMORY_GB="16"
+export TRINO_MIN_CORES=2
+export TRINO_MAX_CORES=4
+
