--- a/env/env.template
+++ b/env/env.template
@@ -28,8 +28,6 @@ export TRINO_DOMAINNAME=
 export TRINO_USER=
 export TRINO_PASSWORD=
 
-# trino auth files
-export TRINO_PASSWORD_FILE=
-export TRINO_GROUPS_FILE=
-export TRINO_RULES_FILE=
-
+export TRINO_JVM_MEMORY_GB="16"
+export TRINO_MIN_CORES=2
+export TRINO_MAX_CORES=4
