--- a/env/env.template
+++ b/env/env.template
@@ -8,21 +8,28 @@
 
 # trino environment
 export TRINO_ENV=
-export TRINO_NAMESPACE=
-export HIVE_NAMESPACE=
+export TRINO_NAMESPACE=trino
+export HIVE_NAMESPACE=trino
 export HIVE_IMAGE=
 
 # s3 credentials
 export S3_ENDPOINT=
 export S3_ACCESS_KEY=
 export S3_SECRET_KEY=
+export S3_BUCKET_NAME=
 
-# metastore credentials
+# metastore details/credentials
+export TRINO_DBHOST=
+export TRINO_DBNAME=
 export TRINO_DBUSER=
 export TRINO_DBPASSWORD=
 
 # trino ingress domain name
 export TRINO_DOMAINNAME=
+
+# hive ingress domain name
+export HIVE_DOMAINNAME=
+export INGRESS_NAMESPACE=ingress-nginx
 
 # trino admin credentials
 export TRINO_USER=
