--- a/hive-metastore/resources/istio/base/hive-virtualservice.yaml
+++ b/hive-metastore/resources/istio/base/hive-virtualservice.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: hive-metastore
-  namespace: trino
+  namespace: $(namespace)
 spec:
   gateways:
   - hive-gateway
