--- a/hive-metastore/resources/istio/base/hive-gateway.yaml
+++ b/hive-metastore/resources/istio/base/hive-gateway.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
   name: hive-gateway
-  namespace: trino
+  namespace: $(namespace)
 spec:
   selector:
     istio: ingressgateway
