--- a/trino/resources/nginx/base/trino-ingress.yaml
+++ b/trino/resources/nginx/base/trino-ingress.yaml
@@ -7,7 +7,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: trino-ingress
-  namespace: trino
+  namespace: $(namespace)
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
