fix typo in ns var (#116)
rename metadb var names to HIVE_ to better associate functionality and avoid db confusion

--- a/conf/hive-init-schema.yaml.template
+++ b/conf/hive-init-schema.yaml.template
@@ -18,10 +18,10 @@ spec:
           mountPath: /opt/hadoop/etc/hadoop/core-site.xml
           subPath: core-site.xml
         command: ["/opt/hive/bin/schematool"]
-        args: ["-dbType", "mysql", "-initSchema", "-userName", "${TRINO_DBUSER}", "-passWord", "${TRINO_DBPASSWORD}", 
-          "-url", "jdbc:mysql://mysql-service.${HIVE_NAMESPACE}.svc.cluster.local:3306/${TRINO_DBNAME}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true"]
-        #args: ["-dbType", "postgres", "-initSchema", "-userName", "${TRINO_DBUSER}", "-passWord", "${TRINO_DBPASSWORD}", 
-          #"-url", "jdbc:postgresql://postgres-service.${HIVE_NAMESPACE}.svc.cluster.local:3306/${TRINO_DBNAME}"]
+        args: ["-dbType", "mysql", "-initSchema", "-userName", "${HIVE_DBUSER}", "-passWord", "${HIVE_DBPASSWORD}", 
+          "-url", "jdbc:mysql://mysql-service.${HIVE_NAMESPACE}.svc.cluster.local:3306/${HIVE_DBNAME}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true"]
+        #args: ["-dbType", "postgres", "-initSchema", "-userName", "${HIVE_DBUSER}", "-passWord", "${HIVE_DBPASSWORD}", 
+          #"-url", "jdbc:postgresql://postgres-service.${HIVE_NAMESPACE}.svc.cluster.local:3306/${HIVE_DBNAME}"]
       restartPolicy: Never
       volumes:
         - name: metastore-cfg-vol
