--- a/.github/workflows/kustomize_build.yaml
+++ b/.github/workflows/kustomize_build.yaml
@@ -12,7 +12,7 @@ env:
   S3_ENDPOINT: s3a://minio-svc
   S3_ACCESS_KEY: test
   S3_SECRET_KEY: test
-  TRINO_DBPASSWORD: test
+  HIVE_DBPASSWORD: test
   TRINO_PASSWORD: TEST
 
 jobs:
