--- a/env/env.template
+++ b/env/env.template
@@ -18,18 +18,18 @@ export S3_ACCESS_KEY=
 export S3_SECRET_KEY=
 export S3_BUCKET_NAME=
 
-# metastore details/credentials
-export TRINO_DBHOST=
-export TRINO_DBNAME=
-export TRINO_DBUSER=
-export TRINO_DBPASSWORD=
+export INGRESS_NAMESPACE=ingress-nginx
+
+# hive metastore details/credentials
+export HIVE_DBHOST=
+export HIVE_DBNAME=
+export HIVE_DBUSER=
+export HIVE_DBPASSWORD=
+# hive ingress domain name
+export HIVE_DOMAINNAME=
 
 # trino ingress domain name
 export TRINO_DOMAINNAME=
-
-# hive ingress domain name
-export HIVE_DOMAINNAME=
-export INGRESS_NAMESPACE=ingress-nginx
 
 # trino admin credentials
 export TRINO_USER=
