--- a/env/env.template
+++ b/env/env.template
@@ -16,7 +16,6 @@ export HIVE_IMAGE=
 export S3_ENDPOINT=
 export S3_ACCESS_KEY=
 export S3_SECRET_KEY=
-export S3_BUCKET_NAME=
 
 export INGRESS_NAMESPACE=ingress-nginx
 
@@ -25,6 +24,7 @@ export HIVE_DBHOST=
 export HIVE_DBNAME=
 export HIVE_DBUSER=
 export HIVE_DBPASSWORD=
+export HIVE_S3_BUCKET=
 # hive ingress domain name
 export HIVE_DOMAINNAME=
 
