--- a/env/example/configs/mysql.properties
+++ b/env/example/configs/mysql.properties
@@ -1,5 +1,5 @@
   mysql.properties: |-
     connector.name=mysql
     connection-url=jdbc:mysql://mysql-service.${HIVE_NAMESPACE}.svc.cluster.local:3306
-    connection-user=${TRINO_DBUSER}
-    connection-password=${TRINO_DBPASSWORD}
+    connection-user=${HIVE_DBUSER}
+    connection-password=${HIVE_DBPASSWORD}
