--- a/env/example/example.env
+++ b/env/example/example.env
@@ -4,13 +4,13 @@ export TRINO_ENV=demo
 export S3_ENDPOINT=
 export S3_ACCESS_KEY=
 export S3_SECRET_KEY=
-export S3_BUCKET_NAME=hive
 
 # metastore credentials
-export TRINO_DBHOST="postgres-service.trino.svc.cluster.local:5432"
-export TRINO_DBNAME="metastore_db"
-export TRINO_DBUSER=root
-export TRINO_DBPASSWORD=pgadminpw
+export HIVE_DBHOST="postgres-service.trino.svc.cluster.local:5432"
+export HIVE_DBNAME="metastore_db"
+export HIVE_DBUSER=trinoadmin
+export HIVE_DBPASSWORD=pgadminpw
+export HIVE_S3_BUCKET=hive
 
 # trino ingress domain name
 export TRINO_DOMAINNAME=
