--- a/env/example/example.env
+++ b/env/example/example.env
@@ -2,6 +2,7 @@ export TRINO_ENV=demo
 
 # s3 credentials
 export S3_ENDPOINT=
+export S3_REGION=us-east-1
 export S3_ACCESS_KEY=
 export S3_SECRET_KEY=
 
