--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -8,4 +8,33 @@ resources:
 images:
 - name: quay.io/tcarland/hive
   newName: gcr.io/myproject/hive
-  newTag: v3.1.3-fenrir-2410.02
+  newTag: v3.1.3-ymir-2502.13
+
+patches:
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: hive-metastore
+      namespace: $(namespace)
+    spec:
+      selector:
+        matchLabels:
+          app: hive-metastore
+      template:
+        metadata:
+          labels:
+            app: hive-metastore
+        spec:
+          containers:
+          - name: hive-metastore
+            env:
+            - name: AWS_REGION
+              value: us-east-1
+            resources:
+              requests:
+                memory: "16G"
+                cpu: "2"
+              limits:
+                memory: "24G"
+                cpu: "4"
