--- a/hive-metastore/resources/Containerfile
+++ b/hive-metastore/resources/Containerfile
@@ -1,4 +1,3 @@
-
 ARG java_version=17
 
 FROM eclipse-temurin:${java_version}-jre
@@ -7,11 +6,13 @@ ARG hadoop_version=3.3.4
 ARG hive_version=3.1.3
 ARG mysql_cj_version=8.4.0
 ARG pg_jdbc_version=42.7.4
+ARG aws_sdk_version=1.12.777
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://archive.apache.org/dist/hive
 ARG mysql_uri=https://dev.mysql.com/get/Downloads/Connector-J
 ARG pgsql_uri=https://jdbc.postgresql.org/download
+ARG aws_sdk_uri=https://repo1.maven.org/maven2/com/amazonaws
 
 ENV HADOOP_HOME="/opt/hadoop"
 ENV HIVE_HOME="/opt/hive"
@@ -27,8 +28,10 @@ RUN curl -L ${hadoop_uri}/hadoop-${hadoop_version}/hadoop-${hadoop_version}.tar.
     tar xvz -C /opt/ && \
 	ln -s /opt/hadoop-${hadoop_version} /opt/hadoop && \
 	rm -r /opt/hadoop/share/doc && \
-    ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoop/common/lib/ && \
-    ln -s /opt/hadoop/share/hadoop/tools/lib/aws-java-sdk* /opt/hadoop/share/hadoop/common/lib/
+    ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoop/common/lib/
+
+RUN curl -L ${aws_sdk_uri}/aws-java-sdk-bundle/${aws_sdk_version}/aws-java-sdk-bundle-${aws_sdk_version}.jar \
+    -o /opt/hadoop/share/hadoop/common/lib/aws-java-sdk-bundle-${aws_sdk_version}.jar
 
 RUN curl -L ${hive_uri}/hive-${hive_version}/apache-hive-${hive_version}-bin.tar.gz | \
 	tar xvz -C /opt/ && \
