--- a/trino/base/statefulset.yaml
+++ b/trino/base/statefulset.yaml
@@ -27,7 +27,10 @@ spec:
         - containerPort: 8080
         env:
         - name: AWS_REGION
-          value: us-west-3
+          valueFrom:
+            secretKeyRef:
+              name: trino-secrets
+              key: S3_REGION
         - name: AWS_ACCESS_KEY_ID
           valueFrom:
             secretKeyRef:
