--- a/hive-metastore/base/kustomization.yaml
+++ b/hive-metastore/base/kustomization.yaml
@@ -26,4 +26,8 @@ secretGenerator:
 labels:
 - includeSelectors: true
   pairs:
+    app.kubernetes.io/component: hive-metastore
+    app.kubernetes.io/name: hive-metastore
+    app.kubernetes.io/part-of: trino-on-k8s
+    app.kubernetes.io/version: v25.03.06
     kustomize.component: hive-metastore
