--- a/trino/base/kustomization.yaml
+++ b/trino/base/kustomization.yaml
@@ -30,5 +30,9 @@ secretGenerator:
 labels:
 - includeSelectors: true
   pairs:
+    app.kubernetes.io/component: trinodb
+    app.kubernetes.io/name: trino
+    app.kubernetes.io/part-of: trino-on-k8s
+    app.kubernetes.io/version: v25.03.06
     kustomize.component: trino
 
