--- a/trino/resources/istio/base/trino-virtualservice.yaml
+++ b/trino/resources/istio/base/trino-virtualservice.yaml
@@ -10,7 +10,11 @@ spec:
   hosts:
   - "$TRINO_DOMAINNAME"
   http:
-  - match:
+  - headers:
+      request:
+        set:
+          X-Forwarded-Proto: https
+    match:
     - uri:
         prefix: /
     name: trino-coordinator-service
