--- a/env/env.template
+++ b/env/env.template
@@ -18,18 +18,16 @@ export S3_REGION=
 export S3_ACCESS_KEY=
 export S3_SECRET_KEY=
 
-export INGRESS_NAMESPACE=ingress-nginx
-
 # hive metastore details/credentials
 export HIVE_DBHOST=
 export HIVE_DBNAME=
 export HIVE_DBUSER=
 export HIVE_DBPASSWORD=
 export HIVE_S3_BUCKET=
-# hive ingress domain name
-export HIVE_DOMAINNAME=
 
-# trino ingress domain name
+# ingress settings
+export INGRESS_NAMESPACE=ingress-nginx
+export HIVE_DOMAINNAME=
 export TRINO_DOMAINNAME=
 
 # trino admin credentials
