--- a/trino/resources/istio/base/kustomization.yaml
+++ b/trino/resources/istio/base/kustomization.yaml
@@ -11,6 +11,17 @@ configMapGenerator:
   envs:
   - params.env
 
+secretGenerator:
+- name: trino-tls
+  namespace: istio-system
+  behavior: create
+  type: "kubernetes.io/tls"
+  files:
+  - tls.crt=trino.crt
+  - tls.key=trino.key
+  options:
+    disableNameSuffixHash: true
+
 replacements:
 - source:
     fieldPath: data.TRINO_DOMAINNAME
@@ -28,6 +39,17 @@ replacements:
       kind: VirtualService
     fieldPaths:
     - spec.hosts.0
-  
+- source:
+    fieldPath: data.ingress_namespace
+    kind: ConfigMap
+    name: trino-istio-params
+    version: v1
+  targets:
+  - select:
+      name: trino-tls
+      kind: Secret
+    fieldPaths:
+    - metadata.namespace
+
 generatorOptions:
   disableNameSuffixHash: true
