fix istio manifest replacing secret name (#122)
* fix istio manifest replacing secret name
* update libs for hive container
* update deployment for latest hive image

--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         fsGroup: 999
       containers:
       - name: hive-metastore
-        image: quay.io/tcarland/hive:v3.1.3-ymir-2502.13
+        image: quay.io/tcarland/hive:v3.1.3-aegir-2503.08
         imagePullPolicy: IfNotPresent
         env:
         - name: AWS_REGION
