--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 images:
 - name: quay.io/tcarland/hive
   newName: gcr.io/myproject/hive
-  newTag: v3.1.3-ymir-2502.13
+  newTag: v3.1.3-aegir-2503.03
 
 patches:
 - patch: |-
