--- a/mysql-server/base/kustomization.yaml
+++ b/mysql-server/base/kustomization.yaml
@@ -24,4 +24,8 @@ secretGenerator:
 labels:
 - includeSelectors: true
   pairs:
+    app.kubernetes.io/component: mysql-server
+    app.kubernetes.io/name: mysql-server
+    app.kubernetes.io/part-of: trino-on-k8s
+    app.kubernetes.io/version: v25.03.22
     kustomize.component: mysql-server
