--- a/conf/trino-configmap.yaml.template
+++ b/conf/trino-configmap.yaml.template
@@ -1,6 +1,6 @@
 ---
-kind: ConfigMap 
-apiVersion: v1 
+kind: ConfigMap
+apiVersion: v1
 metadata:
   name: trino-configs
   namespace: $(namespace)
@@ -71,7 +71,7 @@ data:
     iceberg.unique-table-location=false
     iceberg.register-table-procedure.enabled=true
     iceberg.add-files-procedure.enabled=true
-    hive.metastore.uri=thrift://hive-metastore.${HIVE_NAMESPACE}.svc.cluster.local:9083
+    hive.metastore.uri=thrift://hive-metastore.${HIVE_NAMESPACE}.svc.cluster.local:${HIVE_SERVICE_PORT}
     fs.native-s3.enabled=true
     s3.endpoint=${S3_ENDPOINT}
     s3.path-style-access=true
