--- a/env/env.template
+++ b/env/env.template
@@ -1,9 +1,9 @@
-# This template lists the various configuration options supported 
+# This template lists the various configuration options supported
 # by the setup script. The 'dotenv' technique is still in use here
-# as most of these options have sane defaults as well commonly 
-# being set upstream in the data stack with Trino generally being 
+# as most of these options have sane defaults as well commonly
+# being set upstream in the data stack with Trino generally being
 # the last in the stack. Most options are also configurable via
-# script. The last three FILE options are the overrides perhaps 
+# script. The last three FILE options are the overrides perhaps
 # most likely useful to override per environment.
 
 # trino environment
@@ -24,6 +24,7 @@ export HIVE_DBNAME=
 export HIVE_DBUSER=
 export HIVE_DBPASSWORD=
 export HIVE_S3_BUCKET=
+export HIVE_SERVICE_PORT=9083
 
 # ingress settings
 export INGRESS_NAMESPACE=ingress-nginx
