--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -28,9 +28,6 @@ patches:
         spec:
           containers:
           - name: hive-metastore
-            env:
-            - name: AWS_REGION
-              value: us-east-1
             resources:
               requests:
                 memory: "16G"
@@ -38,3 +35,17 @@ patches:
               limits:
                 memory: "24G"
                 cpu: "4"
+- target:
+    kind: Service
+    name: hive-metastore
+  patch: |-
+    - op: replace
+      path: /spec/ports/0/port
+      value: 9084
+- target:
+    kind: Deployment
+    name: hive-metastore
+  patch: |-
+    - op: replace
+      path: /spec/template/spec/containers/0/ports/0/containerPort
+      value: 9084
