--- a/trino/base/deployment.yaml
+++ b/trino/base/deployment.yaml
@@ -14,6 +14,9 @@ spec:
     metadata:
       labels:
         app: trino-coordinator
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
     spec:
       securityContext:
         runAsUser: 1000
