--- a/conf/core-site.xml.template
+++ b/conf/core-site.xml.template
@@ -16,7 +16,7 @@
 <configuration>
     <property>
         <name>fs.defaultFS</name>
-        <value>s3a://hive</value>
+        <value>s3a://${HIVE_S3_BUCKET}</value>
     </property>
     <property>
         <name>fs.s3a.path.style.access</name>
