--- a/hive-metastore/resources/istio/base/kustomization.yaml
+++ b/hive-metastore/resources/istio/base/kustomization.yaml
@@ -15,10 +15,10 @@ configMapGenerator:
 labels:
 - includeSelectors: true
   pairs:
-    app.kubernetes.io/component: istio-ingress
+    app.kubernetes.io/component: hive-metastore-ingress
     app.kubernetes.io/name: istio
     app.kubernetes.io/part-of: trino-on-k8s
-    app.kubernetes.io/version: v25.04.01
+    app.kubernetes.io/version: v25.04.10
     kustomize.component: hive-metastore-istio
 
 generatorOptions:
