--- a/hive-metastore/resources/nginx/base/kustomization.yaml
+++ b/hive-metastore/resources/nginx/base/kustomization.yaml
@@ -39,11 +39,11 @@ replacements:
 labels:
 - includeSelectors: true
   pairs:
-    app.kubernetes.io/component: nginx-ingress
+    app.kubernetes.io/component: hive-metastore-ingress
     app.kubernetes.io/name: nginx
     app.kubernetes.io/part-of: trino-on-k8s
-    app.kubernetes.io/version: v25.04.01
-    kustomize.component: hive-metastore-nginx
+    app.kubernetes.io/version: v25.04.10
+    kustomize.component: hive-metastore-ingress
 
 generatorOptions:
   disableNameSuffixHash: true
