--- a/trino/resources/nginx/base/kustomization.yaml
+++ b/trino/resources/nginx/base/kustomization.yaml
@@ -36,11 +36,11 @@ replacements:
 labels:
 - includeSelectors: true
   pairs:
-    app.kubernetes.io/component: nginx-ingress
+    app.kubernetes.io/component: trino-ingress
     app.kubernetes.io/name: nginx
     app.kubernetes.io/part-of: trino-on-k8s
-    app.kubernetes.io/version: v25.04.01
-    kustomize.component: trino-nginx
+    app.kubernetes.io/version: v25.04.10
+    kustomize.component: trino-ingress
 
 generatorOptions:
   disableNameSuffixHash: true
